--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,10 @@ composer:
 
 drush:
   image: louisbl/php:5.6-cli
-  working_dir: /var/www
-  entrypoint: ["php", "./vendor/bin/drush.php"]
+  entrypoint: ["php", "../vendor/bin/drush.php", "-l", "http://web"]
   command: ""
   links:
+    - web
     - db
   volumes_from:
     - data
